feat[openapi]: added openapi spec for the service
