# src/main/java/com/praveen/jpa/model/CustomerRepresentation.java
@@ -1,19 +1,0 @@
-package com.praveen.jpa.model;
-
-import lombok.Builder;
-import lombok.Data;
-
-import java.util.List;
-
-@Data
-@Builder
-public class CustomerRepresentation {
-
-  private Long id;
-  private String firstName;
-  private String lastName;
-  private String email;
-  private String contactNumber;
-  private AddressRepresentation address;
-  private List<OrderRepresentation> orders;
-}
