# src/main/resources/openapi/ecommerce.yaml
@@ -157,6 +157,20 @@ paths:
                 type: "array"
                 items:
                   $ref: "#/components/schemas/CustomerRepresentation"
+  "/ecommerce/customersInfo":
+    get:
+      tags:
+        - "ecommerce-resource"
+      operationId: "getAllCustomersInfo"
+      responses:
+        '200':
+          description: "OK"
+          content:
+            application/json:
+              schema:
+                type: "array"
+                items:
+                  $ref: "#/components/schemas/CustomerInfo"
 components:
   schemas:
     AddressRepresentation:
@@ -241,3 +255,17 @@ components:
           type: "array"
           items:
             $ref: "#/components/schemas/OrderRepresentation"
+    CustomerInfo:
+      type: "object"
+      properties:
+        id:
+          type: "integer"
+          format: "int64"
+        firstName:
+          type: "string"
+        lastName:
+          type: "string"
+        email:
+          type: "string"
+        contactNumber:
+          type: "string"
